--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
         
 
     </head>
-    <header class="cabecalho">    
-        <img class="imagem-menu" src="slices/mobile/menu-icon.png" alt="Imagem icone menu">
+    <header class="cabecalho">
+        <nav>
+            <img class="imagem-menu" src="slices/mobile/menu-icon.png" alt="Imagem icone menu">
             <img class="imagem-logo" src="slices/mobile/logo.png" alt="Imagem do logo">
             <!--<h2> O site de teste para novos webs </h2>
             <a class="cabecalho__icon" href="www.facebook.com"> <i class="fa fa-facebook-official" aria-hidden="true"></i>-->
+        </nav>   
     </header>
 
     <body>
